2004-10-28  Paul Brossier <piem@altern.org>
	* src/Makefile.am: added config.h installation

2004-10-26  Paul Brossier <piem@altern.org>:
	* src/pitchdetection.*: moved to src/pitchmcomb.*, now includes a
	draft driver for transparent use of mcomb or yin 
	* src/pitchmcomb.*: added from old src/pitchdetection.*
	* VERSION: 0.1.7

2004-10-20  Paul Brossier <piem@altern.org>:
	* configure.ac: made fftw3f, alsa and jack optional
	* src/fft.{c,h}: now uses FFTW3F_SUPPORT
	* src/timer.c: #if 0 on win32 version

2004-10-18  Paul Brossier <piem@altern.org>:
	* src/{fft,cvec,pvoc}.c: fixed fft size (N/2+1)
	* src/{onsetdetection,tss}.c: fixed sizes as well
	* src/pvoc.c: fixed resynthesis scaling factor (still missing
	windowing), windowing added in pvoc_rdo 
	* src/fft.h: removed FFTW typedef
	* configure.ac: removed AC_ISC_POSIX to compile on mingw32
	* src/fft.c: removed useless fftw3.h include
	* src/pitchmcomb.c: removed call to vec_adapt_thres (writes out of
	bounds)

2004-10-17  Paul Brossier <piem@altern.org>
	* src/sample.c: removed static _malloc, set all 0. (fixes nan bugs)
	* examples/*.c: removed useless pvoc inits
	* src/pitchyin.c: based on de Cheveigne paper

2004-09-17  Paul Brossier <piem@altern.org>
	* configure.ac,src/Makefile.am: cleaned up autotools process
	* examples/aubio*.c: removed some useless code.
	* src/sample.c: removed crazy call to memset

2004-09-02  Paul Brossier <piem@altern.org>
	* src/sndfileio.c: removed abusive call to AUBIO_ARRAY,
	defined MAX_SIZE instead.
	* src/onsetdetection.c: rewritten free_function.
	* src/phasevoc.c: in aubio_pvoc_rdo, one way writing only
	* swig/, python/aubio: added swig wrapper, played a bit with 
	python interface.
	* src/aubio.h: now includes midi_driver.h

2004-06-25  Paul Brossier <piem@altern.org>
	* src/peakpick.h: 
	   renamed pickparams_t to aubio_pickpeak_t 
	   disabled samer_pp (broken)
	   added del_aubio_peakpick
	   added aubio_peakpick_pimrt_wt (thanks mramirez) 