@@ -1,5 +1,5 @@
 AUBIO_MAJOR_VERSION=0
 AUBIO_MINOR_VERSION=1
 AUBIO_PATCH_VERSION=7
-AUBIO_VERSION_STATUS=.1
+AUBIO_VERSION_STATUS=.2
 
